# PySensorParser

./: .gitignore  README.md  json  jsongraph  pprint  pyproject.toml  pysensor.py  requirements.txt  sys
.github/workflows/: ci.yml
src/pysensorparser/: __init__.py  __main__.py  grouping.py  models.py  parser.py
tests/: conftest.py  test_grouping.py  test_integration.py  test_models.py
