[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pysensorparser"
version = "2.0.0"
description = "Call-hub detector for M7700 ECU binaries"
requires-python = ">=3.9"
dependencies = ["r2pipe"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
pysensorparser = "pysensorparser.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: requires radare2 + r2-m7700 plugin installed",
]
